@@ -1,3 +1,6 @@
+(Scott Phillips)
+- Manakin eperson.patch adds API methods for searching epeople & groups.
+
 (Andrea Bollini)
 - SF Patch #1597807 for SF bug #1597805 DIDL Crosswalk: wrong resource management
 
